<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".CreateTripActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbCreateTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        app:title="Create New Trip" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ftfStartLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/tbCreateTrip"
        android:hint="@string/enter_starting_location">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFrom"
        android:singleLine="true"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ftfEndLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ftfStartLocation"
        android:hint="@string/enter_destination">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTo"
            style="@style/ThemeOverlay.Material3.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ftfDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ftfEndLocation"
        android:hint="@string/enter_distance">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etdistance"
        android:inputType="number"
        android:singleLine="true"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ftfDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ftfDistance"
        android:hint="@string/enter_journey_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDate"
            style="@style/ThemeOverlay.Material3.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="showDatePickerDialog"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ftfTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ftfDate"
        android:hint="@string/enter_time">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTime"
        android:focusable="false"
        android:onClick="showTimePickerDialog"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ftfStations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ftfTime"
        android:hint="@string/enter_halting_stations">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStations"
        android:inputType="number"
        android:singleLine="true"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ftfStations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        android:paddingVertical="10dp"
        app:cornerRadius="5dp"
        android:textSize="18sp"
        android:id="@+id/btnsubmit"/>



</androidx.constraintlayout.widget.ConstraintLayout>